--- a/theme/partials/work.hbs
+++ b/theme/partials/work.hbs
@@ -13,33 +13,44 @@
       <label for="work-item-{{@index}}"></label>
       {{/if}}
 
-      <header class="clear">
-        <div class="date">
-          {{#if startDate}}
-          <span class="startDate">{{MY startDate}}</span>
-          {{/if}}
-          {{#if endDate}}
-          <span class="endDate">- {{MY endDate}}</span>
-          {{else}}
-          <span class="endDate">- Current</span>
-          {{/if}}
-        </div>
-        {{#if position}}
-        <div class="position">{{position}}</div>
+      <div style="display: flex;">
+        {{#if image}}
+        <img style="flex: none; max-width: 40px; max-height: 40px; margin-right: 8px;" class="image" src="{{image}}" alt="{{name}}" />
         {{/if}}
-        <div class="company">{{name}}</div>
-      </header>
-      {{/if}}
+        <div style="flex: 1 1 0%;">
+            <header class="clear">
+              <div class="date">
+                {{#if startDate}}
+                <span class="startDate">{{MY startDate}}</span>
+                {{/if}}
+                {{#if endDate}}
+                <span class="endDate">- {{MY endDate}}</span>
+                {{else}}
+                <span class="endDate">- Current</span>
+                {{/if}}
+              </div>
+              {{#if position}}
+              <div class="position">{{position}}</div>
+              {{/if}}
+              <div class="company">{{name}}</div>
+            </header>
+            {{/if}}
 
-      {{#if location}}
-      <span class="fas fa-map-marker-alt"></span>
-      <span class="location">{{location}}</span>
-      {{/if}}
-      {{#if url}}
-      <span class="url">
-        <span class="fas fa-external-link-alt"></span>
-        <a target="_blank" href="{{url}}">{{url}}</a>
-      </span> {{/if}} {{#if keywords.length}}
+            {{#if location}}
+            <span class="fas fa-map-marker-alt"></span>
+            <span class="location">{{location}}</span>
+            {{/if}}
+
+            {{#if url}}
+            <span class="url">
+              <span class="fas fa-external-link-alt"></span>
+              <a target="_blank" href="{{url}}">{{url}}</a>
+            </span>
+            {{/if}}
+        </div>
+      </div>
+
+      {{#if keywords.length}}
       <ul class="keywords">
         {{#each keywords}}
         <li>{{.}}</li>
